Fix layout issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -45,15 +45,15 @@
 	.navbar-default .navbar-nav li a:hover{padding:10px; background:#ccc; text-decoration:none; color:#ffffff; border:none;}
 	.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover{background: #51bf00}
 	.banner-home{background:#ffffff}
-	.header-wrap{display:none;}
 	.wrapR img.dlogo{position:static; display:inline;}
 	.wrapL{padding:90px 30px;}
+	
 }
 @media (min-width: 768px) and  (max-width: 991px){
 	.banner-home{background:#ffffff}
-	.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{padding:30px 11px 11px;}
-	.navbar-default .navbar-nav li a:hover{ padding:30px 10px 11px;}
-	.navbar-nav li a{padding:30px 10px;}
+	.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{padding:24px 11px 11px;}
+	.navbar-default .navbar-nav li a:hover{ padding:24px 11px 11px;}
+	.navbar-nav li a{padding:24px 11px 11px;}
 }
 @media (max-width: 991px){
 	.wrapR h4{margin:10px 0px;}
@@ -68,6 +68,9 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#51bf00', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */}
 	.wrapR{background:#ffffff; margin-top:10px;}
 	.wrapL{background:transparent;}
+	.navbar-default .navbar-toggle{display: none;}
+	.wrapR h4, a.btnW{position: static; text-align: center;}
+	.wrapR p a.btnW{margin-bottom: 20px;}
 }
 @media (min-width: 768px) and (max-width: 1199px){
 	.wrapR img.dlogo{position:static; display:inline; }
@@ -77,7 +80,8 @@
 @media (min-width: 992px) and (max-width: 1199px){
 	
 }
-@media 	(max-width: 1200px){
-	
-	
+@media (min-width: 992px) and (max-width: 1400px){
+	.wrapR img.dlogo{left: 50px}
+	.wrapR h4{position: static; text-align: center; margin-left:10px }
+	a.btnW{position: static; text-align: center;}
 }
